# Game-Attack-Defence

./: README.md
doc/: config_file
files/: CMakeLists.txt
files/src/: class.cpp  class.h  input.cpp  input.h  operators.cpp  operators.h  prog.cpp  simple_class.cpp  simple_class.h
files/tests/: CMakeLists.txt  testing.cpp
